src/components/Footer/Footer.module.scss
.footer {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  background: linear-gradient(to bottom, #403d39 0%, #0d0d0d 100%);
  padding: 0.3rem 0;
  height: 20vh;

  &__marca {
    width: 12rem;
  }

  &__socials {
    width: 18rem;

    ul {
      display: flex;
      flex-flow: row wrap;
      list-style: none;
      align-items: center;
      justify-content: space-between;

      li {
        list-style: none;

        a {
          text-decoration: none;

          svg {
            min-width: 1rem;
            width: 2rem;
            transition: 0.3s all;

            &.linkedin:hover {
              fill: #0a66c2;
              transform: scale(1.5);
            }

            &.github:hover {
              fill: #f0f6fc;
              transform: scale(1.5);
            }

            &.facebook:hover {
              fill: #1877f2;
              transform: scale(1.5);
            }

            &.twitter:hover {
              fill: #1da1f2;
              transform: scale(1.5);
            }
          }
        }
      }
    }
  }

  &__copy {
    width: 90%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-wrap: wrap;

    &__text {
      color: #fffcf2;
      font-size: 0.9em;
      letter-spacing: 0.2rem;
      text-align: center;
    }
  }
}

